--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,20 +35,23 @@ body {
     font-size: var(--font-size-default);
     background-color: var(--color-background-main);
     color: var(--font-color-default);
-    padding: 0 128px;
 }
 
 main {
     font-size: var(--font-size-main);
     color: var(--font-color-main);
+    padding: 0 128px;
 }
 
 h2 {
     font-family: var(--font-default-bold);
     font-size: var(--font-size-heading);
+    text-transform: uppercase;
+    font-weight: 400;
 }
 
 footer {
+    padding: 128px;
     background-color: var(--color-background-footer);
 }
 
@@ -63,8 +66,10 @@ a {
 
 input, textarea {
     display: block;
+    width: 100%;
     border: var(--color-border-input) 1px solid;
     border-radius: 4px;
+    font-size: var(--font-size-default);
 }
 
 
@@ -79,6 +84,7 @@ header {
     display: flex;
     justify-content: space-between;
     margin-top: 32px;
+    padding: 0 128px;
 }
 
 /* 
@@ -91,6 +97,8 @@ header {
     width: 66%;
     margin-top: 64px;
 }
+
+
 
 .hero p {
     margin-top: 32px;
@@ -108,6 +116,10 @@ header {
 
 .galery_column {
     max-width: 33%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
 }
 
 .galery_column article {
@@ -122,3 +134,47 @@ header {
     transform: translate(-50%, -50%);
 }
 
+/* 
+================================================================
+                            footer
+================================================================
+*/
+
+footer {
+    margin-top: 16px;
+}
+
+footer > div {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer form {
+    width: 40%;
+    margin-top: 64px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+form > *:not(:first-child) {
+    margin-top: 16px;
+}
+
+form h2 {
+    text-align: center;
+}
+
+form div > *:not(:first-child) {
+    margin-top: 8px;
+}
+
+form div input {
+    height: 2em;
+}
+
+button {
+    width: 100%;
+    background-color: var(--color-background-main);
+    font-size: var(--font-size-default);
+    padding: 0.5em 0;
+}
