--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,13 @@ header {
 
 .gallery img {
     width: 100%;
+    transition: filter 1s;
+    transition-timing-function: ease-in;
+}
+
+
+.gallery article:hover img{
+    filter: grayscale(100%);
 }
 
 .galery_column {
@@ -121,7 +128,7 @@ header {
     display: flex;
     flex-direction: column;
     gap: 16px;
-
+    
 }
 
 .galery_column article {
@@ -134,8 +141,13 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: opacity 1s;
+    color: var(--color-background-main);
 }
 
+.gallery article:hover p {
+    opacity: 1;
+}
 /* 
 ================================================================
                             footer
